# vacatorrent-api

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
api/: __init__.py  __main__.py  caching.py  caching_test.py  extractors_test.py  routes.py  types.py  util.py  utils.py  utils_test.py
api/extractor/: home.py
api/extractors/: __init__.py  download.py  home.py  search.py
api/types/: download.py  home.py  movie.py  search.py
api/util/: datahelper.py
api/v1/: extractors_test.py  routes.py  types.py
api/v1/extractors/: download.py  home.py  search.py
api/v1/routes/: __init__.py  download.py  home.py  search.py
api/v2/: __init__.py  errors.py  response.py  responses.py
api/v2/extractors/: download.py  download_test.py  home.py  home_test.py  search.py  search_test.py
api/v2/handlers/: download.py  home.py  search.py
