[tool.poetry]
name = "vacatorrent-api"
version = "0.2.0"
description = "Web scrapper API for VacaTorrent"
authors = ["Dheisom Gomes <dheisomgomes0@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "vacatorrent_api"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "3.8.3"
beautifulsoup4 = "4.11.1"
lxml = "4.9.1"
sanic = "22.9.1"
sanic-ext = "22.12.0"
sanic-routing = "22.8.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
faker = "^16.6.0"
pytest-asyncio = "^0.20.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
